--- a/Lesson-2-Layouts/app/src/main/res/values/strings.xml
+++ b/Lesson-2-Layouts/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     \nHello users, this is nothing!\nHello users, this is nothing!\nHello users, this is nothing!\nHello users, this is nothing!\nHello users, this is nothing!
     \nHello users, this is nothing!\nHello users, this is nothing!\nHello users, this is nothing!\nHello users, this is nothing!\nHello users, this is nothing!</string>
     <string name="hint">What is your name?</string>
+    <string name="done">Done</string>
 </resources>
