--- a/Lesson-2-Layouts/ColorMyViews/app/src/main/res/values/strings.xml
+++ b/Lesson-2-Layouts/ColorMyViews/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="button_red">RED</string>
     <string name="button_yellow">YELLOW</string>
     <string name="button_green">GREEN</string>
+    <string name="how_to_play">How to play</string>
 </resources>
